# krita-analogies

./: Analogies.cpp  Analogies.h  CMakeLists.txt  Feature.cpp  Feature.h  FeatureSearch.cpp  FeatureSearch.h  Utils.h  kritaAnalogies.desktop
libann/src/: CMakeLists.txt
